[package]
name = "wuwa-downloader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
colored = "3.0.0"
md-5 = "0.10.6"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json = "1.0.140"
serde = "1.0.219"
winconsole = "0.11.1"
ctrlc = "3.4.5"
shellexpand = "3.1.0"
flate2 = "1.1.1"