[package]
name = "wuwa-downloader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
colored = "3.0.0"
md-5 = "0.10.6"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json = "1.0.140"
serde = "1.0.219"
ctrlc = "3.4.7"
shellexpand = "3.1.1"
flate2 = "1.1.1"

[target.'cfg(windows)'.dependencies]
winconsole = "0.11.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1